--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <bod  y>
     <!-- Navbar section -->
     <header class="bg-[#15803d] fixed w-full">
       <div
@@ -52,9 +52,11 @@
       </div>
     </header>
     <!-- Banner section -->
-    <section class="bg-[#cff0dc] flex justify-between items-center pt-23">
-      <img src="./assets/hero-leaf1.png" alt="" class="hidden sm:block" />
-      <div class="text-center space-y-3">
+    <section
+      class="bg-[#cff0dc] flex flex-col sm:flex-row justify-between items-center pt-23"
+    >
+      <img src="./assets/hero-leaf1.png" alt="" class="" />
+      <div class="text-center space-y-3 py-4">
         <h2 class="text-4xl font-bold">Plant a Tree, Grow a Future</h2>
         <p class="text-xs text-gray-500">
           Join our mission to plant 1 million trees and make the Earth greener
@@ -65,212 +67,115 @@
           Get Involved
         </button>
       </div>
-      <img src="./assets/hero-leaf2.png" alt="" class="hidden sm:block" />
+      <img src="./assets/hero-leaf2.png" alt="" class="" />
     </section>
 
     <!-- Functionalities section -->
 
-    <main class="bg-[#f0fdf4] pt-5">
-      <p class="text-4xl font-bold text-center">Choose Your Trees</p>
+    <main class="bg-[#f0fdf4] pt-10">
+      <p class="text-4xl font-bold text-center pb-2">Choose Your Trees</p>
 
       <section class="flex flex-col md:flex-row justify-between p-5 space-x-5">
         <!-- Categories section -->
         <div id="categories-list" class="md:w-3/12 flex flex-col pl-6 mb-4">
-          <p class="text-xl font-bold pb-2">Categories</p>
-
-
-
-
-          <!-- <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2"> All Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Fruit Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Flowering Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Shade Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Medicinal Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Timber Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Evergreen Trees</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Ornamental Plants</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Bamboo</p>
-          <p class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2">Climbers</p> -->
-
-
-
+          <span class="text-xl font-bold pb-3">Categories</span>
+          <p
+            id="categories-all"
+            class="hover:bg-[#15803d] hover:text-white cursor-pointer rounded-md p-2"
+            onclick="loadAllCard()"
+          >
+            All Tree
+          </p>
         </div>
 
         <!-- card section -->
+
         <section
-          class="grid grid-col-1 md:grid-cols-3 space-x-5 space-y-5 px-4 md:w-11/12 mb-5"
-        >
-          <div class="rounded-xl bg-base-100 shadow-lg p-4 space-y-3">
-            <figure class="">
-              <img src="./assets/images.jpg" alt="" class="rounded-xl w-full" />
-            </figure>
-            <div class="">
-              <h2 class="card-title">Mango Tree</h2>
-              <p>
-                A fast-growing tropical tree that produces delicious, juicy
-                mangoes during summer. Its dense green
-              </p>
-            </div>
-
-            <div class="flex justify-between items-center">
-              <button class="bg-[#dcfce7] p-2 rounded-2xl">Fruit Tree</button>
-
-              <p class="pr-4">৳500</p>
-            </div>
-
-            <div class="card-actions">
-              <button class="btn bg-[#15803d] text-white w-full rounded-3xl">
-                Add to Cart
-              </button>
-            </div>
-          </div>
-
-          <!-- <div class="rounded-xl bg-base-100 shadow-sm p-4 space-y-3">
-            <figure class="">
-              <img src="./assets/images.jpg" alt="" class="rounded-xl w-full" />
-            </figure>
-            <div class="">
-              <h2 class="card-title">Mango Tree</h2>
-              <p>
-                A fast-growing tropical tree that produces delicious, juicy
-                mangoes during summer. Its dense green
-              </p>
-            </div>
-
-            <div class="flex justify-between items-center">
-              <button class="bg-[#dcfce7] p-2 rounded-2xl">Fruit Tree</button>
-
-              <p class="pr-2">৳500</p>
-            </div>
-
-            <div class="card-actions">
-              <button class="btn bg-[#15803d] text-white w-full rounded-3xl">
-                Add to Cart
-              </button>
-            </div>
-          </div>
-
-          <div class="rounded-xl bg-base-100 shadow-sm p-4 space-y-3">
-            <figure class="">
-              <img src="./assets/images.jpg" alt="" class="rounded-xl w-full" />
-            </figure>
-            <div class="">
-              <h2 class="card-title">Mango Tree</h2>
-              <p>
-                A fast-growing tropical tree that produces delicious, juicy
-                mangoes during summer. Its dense green
-              </p>
-            </div>
-
-            <div class="flex justify-between items-center">
-              <button class="bg-[#dcfce7] p-2 rounded-2xl">Fruit Tree</button>
-
-              <p class="pr-2">৳500</p>
-            </div>
-
-            <div class="card-actions">
-              <button class="btn bg-[#15803d] text-white w-full rounded-3xl">
-                Add to Cart
-              </button>
-            </div>
-          </div>
-
-          <div class="rounded-xl bg-base-100 shadow-sm p-4 space-y-3">
-            <figure class="">
-              <img src="./assets/images.jpg" alt="" class="rounded-xl w-full" />
-            </figure>
-            <div class="">
-              <h2 class="card-title">Mango Tree</h2>
-              <p>
-                A fast-growing tropical tree that produces delicious, juicy
-                mangoes during summer. Its dense green
-              </p>
-            </div>
-
-            <div class="flex justify-between items-center">
-              <button class="bg-[#dcfce7] p-2 rounded-2xl">Fruit Tree</button>
-
-              <p class="pr-2">৳500</p>
-            </div>
-
-            <div class="card-actions">
-              <button class="btn bg-[#15803d] text-white w-full rounded-3xl">
-                Add to Cart
-              </button>
-            </div>
-          </div>
-
-          <div class="rounded-xl bg-base-100 shadow-sm p-4 space-y-3">
-            <figure class="">
-              <img src="./assets/images.jpg" alt="" class="rounded-xl w-full" />
-            </figure>
-            <div class="">
-              <h2 class="card-title">Mango Tree</h2>
-              <p>
-                A fast-growing tropical tree that produces delicious, juicy
-                mangoes during summer. Its dense green
-              </p>
-            </div>
-
-            <div class="flex justify-between items-center">
-              <button class="bg-[#dcfce7] p-2 rounded-2xl">Fruit Tree</button>
-
-              <p class="pr-2">৳500</p>
-            </div>
-
-            <div class="card-actions">
-              <button class="btn bg-[#15803d] text-white w-full rounded-3xl">
-                Add to Cart
-              </button>
-            </div>
-          </div>
-
-          <div class="rounded-xl bg-base-100 shadow-sm p-4 space-y-3">
-            <figure class="">
-              <img src="./assets/images.jpg" alt="" class="rounded-xl w-full" />
-            </figure>
-            <div class="">
-              <h2 class="card-title">Mango Tree</h2>
-              <p>
-                A fast-growing tropical tree that produces delicious, juicy
-                mangoes during summer. Its dense green
-              </p>
-            </div>
-
-            <div class="flex justify-between items-center">
-              <button class="bg-[#dcfce7] p-2 rounded-2xl">Fruit Tree</button>
-
-              <p class="pr-2">৳500</p>
-            </div>
-
-            <div class="card-actions">
-              <button class="btn bg-[#15803d] text-white w-full rounded-3xl">
-                Add to Cart
-              </button>
-            </div>
-          </div> -->
-
-        </section>
+          id="card-container"
+          class="grid grid-col-1 w-full md:grid-cols-3 gap-5 px-4 md:w-11/12 mb-5"
+        ></section>
 
         <!-- Cart section -->
-        <section class="bg-white w-11/12 md:w-2/9 rounded-xl space-y-2 shadow-lg p-3 ">
-          <h2 class="text-lg font-bold pt-5 pl-2 pb-2" >Your Cart</h2>
 
-          <div class="flex justify-between items-center  p-3 bg-[#F0FDF480] shadow-md rounded-lg">
-            <div class="">
-              <p class="text-lg font-bold">Mango Tree</p>
-              <p>৳500 x 1</p>
+        <section
+          class="bg-white sm:w-3/12 w-full rounded-xl shadow-lg py-3 px-8"
+        >
+          <h2 class="text-lg font-bold pt-5 pl-2 pb-3">Your Cart</h2>
+          <div id="cart-container"></div>
+          <div>
+            <hr class="text-gray-300 my-4" />
+            <div class="flex justify-between items-center">
+              <h2>Total:</h2>
+              <p>৳<span id="total-price">0</span></p>
             </div>
-
-            <span class="cursor-pointer">✖</span>
           </div>
-
-
         </section>
+      </section>
+
+      <section class="pt-20">
+        <h2 class="text-4xl font-bold text-center">About the Campaign</h2>
+
+        <div
+          class="flex flex-col md:flex-row justify-center items-center pb-36 gap-8 mt-20"
+        >
+          <img src="./assets/about.png" alt="" class="p-4" />
+          <div class="md:w-3/12 p-4">
+            <p class="text-gray-600">
+              Green Earth is a global tree plantation initiative dedicated to
+              fighting climate change.Since our start, we’ve planted over
+              500,000 trees worldwide.By joining our campaign,you help restore
+              forests,create habitats for wildlife,and combat global warming.
+            </p>
+
+            <ul class="list-disc list-inside space-y-2 text-gray-600 pt-2">
+              <li>Restoration of natural habitats</li>
+              <li>Improvement of air quality</li>
+              <li>Support for local communities</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="bg-[#cff0dc] py-15">
+        <h2 class="text-center font-semibold text-3xl py-8">Our Impact</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-5 w-11/12 mx-auto">
+          <div
+            class="py-8 px-10 bg-white rounded-xl flex flex-col justify-center items-center"
+          >
+            <h1 class="text-[#15803d] font-semibold text-3xl">500K+</h1>
+            <p class="text-[#4c545f]">Trees Planted</p>
+          </div>
+          <div
+            class="py-8 px-10 bg-white rounded-xl flex flex-col justify-center items-center"
+          >
+            <h1 class="text-[#15803d] font-semibold text-3xl">120+</h1>
+            <p class="text-[#4c545f]">Communities Involved</p>
+          </div>
+          <div
+            class="py-8 px-10 bg-white rounded-xl flex flex-col justify-center items-center"
+          >
+            <h1 class="text-[#15803d] font-semibold text-3xl">30+</h1>
+            <p class="text-[#4c545f]">Countries Reached</p>
+          </div>
+        </div>
       </section>
     </main>
 
     <footer></footer>
+
+    <!-- Open the modal using ID.showModal() method -->
+
+    <dialog id="modalDialog" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div id="modal_contant"></div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
 
     <script src="./JS/script.js"></script>
   </body>
