work in form section and done footer section

--- a/index.html
+++ b/index.html
@@ -183,9 +183,11 @@
 </div>
 </section>
 
-<form action="" class="p-20 bg-[#15803d] flex justify-center items-center bg-[#166534]">
-  
-  
+<section class="bg-[#166534]">
+
+  <h2 class="text-3xl font-semibold text-center pt-20">Plant a Tree Today</h2>
+
+  <form action="" class="pb-20 px-4 pt-2 flex justify-center items-center ">  
   
   <fieldset class="fieldset shadow-md rounded-box w-lg  p-4  bg-[#15803d]">
     
@@ -201,19 +203,23 @@
     class="select w-full"
     >
     <option disabled selected>Number of Trees</option>
-    <option>10 Trees</option>
-    <option>20 Trees</option>
-    <option>30 Trees</option>
-    <option>More Trees</option>
+    <option>1 Tree $5</option>
+    <option>5 Tree $22</option>
+    <option>10 Trees $45</option>
   </select>
   
   <button type="" class="btn btn-warning rounded-3xl text-[#15803d]  mt-2">Donate Now</button>
 </fieldset>
 
 </form>
+</section>
+
+
 </main>
 
-<footer>
+<footer class="bg-[#14532d] p-5 h-full">
+  
+  <p class=" text-center text-white">© 2025 Green Earth. All Rights Reserved.</p>
   
 </footer>
 
