edit into the donation button and edid readme file

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 
 
-    <section>
+    <section class="">
       <!-- Open the modal using ID.showModal() method -->
-<dialog id="modalDialog" class="modal modal-bottom sm:modal-middle">
+<dialog id="modalDialog" class="modal modal-bottom sm:modal-middle ">
   <div class="modal-box">
     <div id="modal_contant"></div>
     <div class="modal-action">
@@ -159,23 +159,23 @@
       </div>
     </section>
     
-    <section class="bg-[#cff0dc] py-15">
+    <section class="bg-[#cff0dc] py-20 px-16">
       <h2 class="text-4xl font-bold text-center py-8">Our Impact</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-3 gap-5 w-11/12 mx-auto">
+      <div class="grid grid-cols-1 sm:grid-cols-3 gap-9 w-11/12 mx-auto">
         <div
-        class="flex flex-col justify-center items-center bg-white  py-9 rounded-lg "
+        class="flex flex-col justify-center items-center bg-white  py-9 rounded-xl hover:bg-green-200 shadow-lg"
         >
         <h1 class="text-3xl text-[#15803D] font-semibold ">500K+</h1>
         <p class="text-gray-600 text-m">Trees Planted</p>
       </div>
       <div
-      class="flex flex-col justify-center items-center bg-white  py-9 rounded-lg"
+      class="flex flex-col justify-center items-center bg-white  py-9 rounded-xl hover:bg-green-200 shadow-lg"
       >
       <h1 class="text-3xl text-[#15803D] font-semibold">120+</h1>
       <p class="text-gray-600">Communities Involved</p>
     </div>
     <div
-    class="flex flex-col justify-center items-center bg-white  py-9 rounded-lg"
+    class="flex flex-col justify-center items-center bg-white  py-9 rounded-xl hover:bg-green-200 shadow-lg"
     >
     <h1 class="text-3xl text-[#15803D] font-semibold">30+</h1>
     <p class="text-gray-600">Countries Reached</p>
@@ -185,7 +185,7 @@
 
 <section class="bg-[#166534]">
 
-  <h2 class="text-3xl font-semibold text-center pt-20">Plant a Tree Today</h2>
+  <h2 class="text-3xl font-semibold text-center pt-20 text-white">Plant a Tree Today</h2>
 
   <form action="" class="pb-20 px-4 pt-2 flex justify-center items-center ">  
   
@@ -199,7 +199,7 @@
     <input type="email" class="input w-full" placeholder="Your Email Address" />
     
     <select
-    id="bank"
+    id="tree"
     class="select w-full"
     >
     <option disabled selected>Number of Trees</option>
@@ -208,18 +208,19 @@
     <option>10 Trees $45</option>
   </select>
   
-  <button type="" class="btn btn-warning rounded-3xl text-[#15803d]  mt-2">Donate Now</button>
+  <button type="button" class="btn btn-warning rounded-3xl text-[#15803d]  mt-2">Donate Now</button>
 </fieldset>
 
+<!-- footer section -->
 </form>
 </section>
 
 
 </main>
 
-<footer class="bg-[#14532d] p-5 h-full">
+<footer class="bg-[#14532d] p-5 h-full text-white">
   
-  <p class=" text-center text-white">© 2025 Green Earth. All Rights Reserved.</p>
+  <p class=" text-center ">© 2025 Green Earth. All Rights Reserved.</p>
   
 </footer>
 
